test/tests/errors/error-own-empty-env.sm
// true
// false
// false
/**/
/**/

program {
    var a: int = 1;
    {
        own x: int = a;
    }
}